20090928
	update import(4) to remove the restriction to Plan 9 (can use Inferno's own factotum)
	(emu os)^/port/devmnt.c fix from plan 9 (don't access vanished data)
20090830
	check subexp length in ed [cmbrannon79]
20090825
	add netmkaddr call to /appl/cmd/ftpfs.b; send errors to standard error
20090824
	delete unused (and somewhat incomplete) pin support
20090822
	in the what were we thinking dept: appl/cmd/touch.b and dis/touch.dis updated to avoid using an Arg after nil'ing it [thanks to cmbrannon]
	make progmode propagate to pgrps; recover from exceptions in pgrp creation
20090821
	emu/Nt/^(os.c ie-os.c) add #include <excpt.h>
20090819
	appl/cmd/mk/mk.b replace maketmp/mktemp (issue 202, mechiel); also old change: don't persist with bulkmtime on non-directories
20090816
	registry(4) Event.post increased rootvers when entries are written or removed (issue 179, powerman)
20090809
	bring mkfs(8) up to date (issue 176)
	remove -q options from mkfs and mkext (-q was a transitional option to suppress quoting of file names)
20090806
	increase `backlog' value in all listen calls in hosted Inferno (emu/*/ipif*.c) [powerman]
20090805
	further checking added to libinterp/keyring.c: rejects incorrect states and out of bounds values of f->n
	add lib/emptydirs and mkdirs target to /mkfile (utils/mkdir needs to be changed for Windows use)
20090730
	improve the error checking in strtosk and strtopk to help detect mangled or inappropriate keys
20090728
	emu/port/main.c: put host's working directory name as emuwdir
	document initial environment variables in emu(1)
	appl/lib/bufio.b dis/lib/bufio.dis [issue 199] don't lose track of actual file seek offset (following second suggestion of mjl)
	issue 196: after general apologies for appl/svc/httpd/cache.b (don't look if you don't need it, not one of ours, etc. etc.) will patch as suggested by extrudedaluminiu(!) [vs]
20090719
	correct order of operands to memset(!), eg in ipif [mjl]
20090718